[package]
name = "night-sky"
version = "0.1.0"
authors = ["ContainedBlargh <jon@zendata.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
draw = "0.3.0"
nsvg = "0.5.1"
image = "0.23.14"
indicatif = "0.16.2"